# pywaterkotte

./: .gitignore  Pipfile  README.md  pyproject.toml  sample.py  setup.py  xmltest.py
.github/workflows/: main.yml  publish-to-test-pypi.yml  publish_to_pypi.yml  python-package.yml  python-package.yml.bak  python-publish.yml  test.yml
ecotouch/: __init__.py  ecotouch.py  ecotouch_tags.py  test.py  test_ecotouch.py  test_parser.py
mockdata/: query.cgi  waterkotte.xml  waterkotte3.xml  xml.cgi
pywaterkotte/: __init__.py  detect.py  easycon.py  ecotouch.py  test.py  test_easycon.py  test_ecotouch.py
src/pywaterkotte/: __about__.py  __init__.py  ecotouch.py  sample.py
tests/: test_ecotouch.py
