[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pywaterkotte"
description = 'pywaterkotte is a library to communicate with Waterkotte heatpumps.'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Christian Boland", email = "github@chbol.de" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ['requests']
dynamic = ["version"]

[template.plugins.default]
src-layout = true

[project.urls]
Documentation = "https://github.com/chboland/pywaterkotte#readme"
Issues = "https://github.com/chboland/pywaterkotte/issues"
Source = "https://github.com/chboland/pywaterkotte"

[tool.hatch.version]
path = "src/pywaterkotte/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
  "responses",
  "black"
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=pywaterkotte --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "src/pywaterkotte/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
